--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ figure{
 }
 .afficherplus{
     font-weight: bold;
-    font-size: 20px;
+    font-size: 15px;
     background-color: #F2F2F2;
     margin-top: 10px;
     padding-left: 35px;
@@ -226,5 +226,77 @@ figcaption{
     font-weight: bold;
     font-size: 14px;    
 }
- 
+/*Section 3 Les activités à Marseille*/
 
+#Activités{
+    margin-top: 35px;
+    margin-bottom: 10px;
+
+}
+.lesactivitésàMarseille{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -40px;
+}
+.figureactivités img{
+    height: 321px;
+    width: 200px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.figureactivités{
+    margin-right: 20px;
+}
+.Pomèguesactivités img{
+    height: 117px;
+    width: 204px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.standardactivités img{
+    height: 117px;
+    width: 204px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.lienactivités{
+    text-decoration: none;
+    font-size: 14px;
+    color: black;
+    font-weight: bold;
+}
+.lesactivitésàMarseille figure{
+    box-shadow: 1px 1px 12px gray;
+    border-radius: 20px;
+    padding-bottom: 1px;   
+}
+/*Footer - A propos*/
+
+footer{
+    background-color: #F2F2F2;
+    display: flex;
+    flex-wrap: wrap;
+}
+nav ul{
+    list-style: none;
+    line-height: 25px;
+    font-size: 13px;
+}
+.élémentgras{
+    font-weight: bold;
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+.élémentgauche{
+    margin-left: -20px;
+}
+.élémentcentre{
+    margin-left: 230px;
+}
+.élémentdroite{
+    margin-left: 235px;
+
+}
