--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ button{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-figure a{
+.list a{
     text-decoration: none;
     color: black;
     line-height: 5px;
@@ -194,15 +194,16 @@ figcaption i{
 
 #hebergements .hebergement-populaire .list {
     margin: 0 20px;
-}
+      
 
+}
+.hebergement-populaire .list figure{
+    display: flex;
+    line-height: 18px;
+}
 #hebergements .hebergement-populaire h3 i {
     display: inline-block;
 
-}
-.populaire a{
-    display: flex;
-    line-height: 18px;
 }
 .populaire img{
     width: 115px;
@@ -219,50 +220,50 @@ figcaption i{
 }
 /*Section 3 Les activités à Marseille*/
 
-#Activités{
+#Activites{
     margin-top: 35px;
     margin-bottom: 20px;
 
 }
-.lesactivitésàMarseille{
+.lesactivitesamarseille{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
 }
-.figureactivités img{
+.figureactivites img{
     height: 375px;
     width: 250px;
     object-fit: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-.deuxactivités{
+.deuxactivites{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.Pomèguesactivités img{
+.Pomeguesactivites img{
     height: 130px;
     width: 300px;
     object-fit: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-.standardactivités img{
+.standardactivites img{
     height: 140px;
     width: 300px;
     object-fit: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-.lienactivités{
+.lienactivites{
     text-decoration: none;
     font-size: 14px;
     color: black;
     font-weight: bold;
 }
-.lesactivitésàMarseille figure{
+.lesactivitesamarseille figure{
     box-shadow: 1px 1px 12px gray;
     border-radius: 10px;
     padding-bottom: 1px;
@@ -284,20 +285,19 @@ nav ul{
     line-height: 25px;
     font-size: 13px;
 }
-.élémentgras{
+.elementgras{
     font-weight: bold;
     font-size: 15px;
     margin-bottom: 15px;
 }
-.élémentgauche{
+.elementgauche{
     margin-left: -20px;
 }
-.élémentcentre{
+.elementcentre{
     margin-left: 230px;
 }
-.élémentdroite{
+.elementdroite{
     margin-left: 235px;
-
 }
 
 
