--- a/style.css
+++ b/style.css
@@ -42,11 +42,7 @@ nav a{
     margin-right: 30px;
 
 }
-.liens :hover{
-    color: #0065fc;
-    border-top: 2px solid #0065fc;
-    padding-top: 35px;
-}
+
 /*Section 1 CSS*/
 
 .rechercheville {
@@ -345,14 +341,22 @@ footer nav ul{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        border-bottom: 2px solid #F2F2F2;
-        padding-bottom: 15px;
-        margin-left: 20px;
-           
-    }
-      
+        text-align: center;     
+    
+                   
+    } 
     .lien1{
         margin-top: 0;
+        border-bottom: 2px solid #0065fc;
+        width: 50%;
+        padding-bottom: 15px;
+        margin-right: 0;
+    }
+    .lien2{
+        width: 50%;
+        border-bottom: 2px solid #F2F2F2;
+        padding-bottom: 15px;
+        margin-right: 0;
     }
     .filtres {
         flex-direction: row;
@@ -435,13 +439,14 @@ footer nav ul{
    footer nav ul {
        padding-left:20px;
    }
-        
-   
-
-
-
-
+  
+ 
 }
-
-
+@media only screen and (min-width:1024){
+    .liens :hover{
+        color: #0065fc;
+        border-top: 2px solid #0065fc;
+        padding-top: 35px;
+}
+}
 
